tests/negative/gold/type5-test.gold
tests/negative/type5-test.toit:6:9: error: Unresolved type: 'NonExisting'
  foo x/NonExisting:
        ^~~~~~~~~~~
Compilation failed
